[gd_scene load_steps=6 format=3 uid="uid://d04a5yivmsov"]

[ext_resource type="Script" path="res://level/menu.gd" id="1_wb5gn"]
[ext_resource type="FontFile" uid="uid://cgm1mmx8pbsqd" path="res://old_london/OldLondon.ttf" id="2_eial3"]
[ext_resource type="Texture2D" uid="uid://dupluic1s7pbi" path="res://botoes/botoes/64px/Close_64.png" id="3_qum0n"]
[ext_resource type="Texture2D" uid="uid://ck2ydw5tfar5r" path="res://botoes/botoes/64px/Back_64.png" id="4_m5ywa"]
[ext_resource type="Texture2D" uid="uid://dau63t4rggsd3" path="res://botoes/botoes/64px/Restart_64.png" id="5_b8qur"]

[node name="MENU" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_wb5gn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -112.0
offset_right = 36.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2

[node name="voltar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.529533, 0, 0.0983391, 1)
theme_override_fonts/font = ExtResource("2_eial3")
theme_override_font_sizes/font_size = 60
icon = ExtResource("4_m5ywa")
flat = true

[node name="reiniciar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_eial3")
theme_override_font_sizes/font_size = 60
icon = ExtResource("5_b8qur")
flat = true

[node name="sair" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_eial3")
theme_override_font_sizes/font_size = 60
icon = ExtResource("3_qum0n")
flat = true

[connection signal="pressed" from="VBoxContainer/voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="VBoxContainer/reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="VBoxContainer/sair" to="." method="_on_sair_pressed"]
